add hyperlink tags

--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 
 <body>
        <header>
-            <h1>Meet Ara, the modular phone.</h1>
+            <nav>
+  <ul>
+    <li><a href="home.html">about ara</a></li>
+    <li><a href="products.html">for developers</a></li>
+  </ul>
+</nav>
+<h1>Meet Ara, the modular phone.</h1>
             <h2>Developer Edition Shipping Fall 2016</h2>
        </header>
+
+       
 </body>
 
 
