added bottom section

--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
 <html>
-    <body>
-<head>
-    <title>Ara</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
 
 <body>
-       <header>
+
+    <head>
+        <title>Ara</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+
+    <body>
+        <header>
             <nav>
-  <ul>
-    <li><a href="home.html">about ara</a></li>
-    <li><a href="products.html">for developers</a></li>
-  </ul>
-</nav>
-<h1>Meet Ara, the modular phone.</h1>
+                <ul>
+                    <li><a href="home.html">about ara</a></li>
+                    <li><a href="products.html">for developers</a></li>
+                </ul>
+            </nav>
+
+            <h1>Meet Ara, the modular phone.</h1>
             <h2>Developer Edition Shipping Fall 2016</h2>
-       </header>
+            <p class="button"><a href="watch.html">watch video</a></p>
+        </header>
 
-       
-</body>
-
-
-
+<section>
+    <p class="inputbars"><a href="uptodate.html">Stay up to date with Ara</a></p>
+    <p class="inputbars"><a href="email.html">Email address</a></p>
+    <p class="twitterbar"><a href="twitter.html">Follow@projectara</a></p>
+</section>
 
     </body>
 
 
 
 
+</body>
 
 
 
@@ -36,4 +41,8 @@
 
 
 
-    </html>
+
+
+
+
+</html>
